*카테고리 추가 기능 추가중  Category Entity 생성  기본 Category 추가 init.sql에 넣어둠  modal 생성  카테고리 추가 Request 구현해야함 (0221)

--- a/bin/main/templates/index.html
+++ b/bin/main/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 	<h1>카테고리선택</h1>
 	<th:block th:each="posts : ${postslist}">
-		<div class="col-md-4">
+		<div class="col-md-4" style="border: solid 1px">
 			<span id="category" th:attr="data-gtype=${posts.category}"></span> <span
 				id="fileName" th:attr="data-gtype=${posts.fileName}"></span>
 			<h3 th:text="${posts.category}" th:id="${posts.category}"></h3>
