--- a/src/main/resources/templates/heag.html
+++ b/src/main/resources/templates/heag.html
@@ -24,18 +24,17 @@
 								method="POST" enctype="multipart/form-data">
 								<div class="form-group">
 									<label class="col-md-1 control-label">카테고리</label>
-									<div class="col-md-10"> 
+									<div class="col-md-10">
 										<select name="category">
-											<option value="HEAG">HEAG</option>
-											<option value="HEMN">HEMN</option>
-											<option value="HEWL">HEWL</option>
-											<option value="HEVW">HEVW</option>
-											<option value="HEES">HEES</option>
+											<th:block th:each="category : ${categorys}">
+												<option th:value="${category.categoryName}"
+													th:text="${category.categoryName}"></option>
+											</th:block>
 										</select>
 									</div>
 								</div>
 								<div class="form-group">
-									<label class="col-md-1 control-label">버전</label> 
+									<label class="col-md-1 control-label">버전</label>
 									<div class="col-md-10">
 										<input type="text" class="form-control" placeholder="버전입력하세요*"
 											id="version" name="version" required="required">
@@ -44,7 +43,7 @@
 								</div>
 								<div class="form-group">
 									<label class="col-md-1 control-label">구분</label>
-									 <div class="col-md-10">
+									<div class="col-md-10">
 										<select name="distinction">
 											<option value="베타">베타</option>
 											<option value="정식">정식</option>
@@ -56,8 +55,8 @@
 										type="file" name="files" />
 								</div>
 								<div class="col-lg-12 text-center">
-									<button class="btn btn-lg btn-primary btn-block"
-										type="submit" name="save">
+									<button class="btn btn-lg btn-primary btn-block" type="submit"
+										name="save">
 										저장하기<i class="mdi-content-send right"></i>
 									</button>
 								</div>
@@ -95,16 +94,16 @@
 			</table>
 		</div>
 
-		   <div class="col-md-12">
-		 		<ul class="pager">
-		 			<li class="previous" th:if=${!postslist.first}>
-		 				<a th:href="|/posts?page=${postslist.number-1}|">&larr; older posts </a>
-		 			</li> 
-		 			<li class="next" th:if=${!postslist.last}>
-		 				<a th:href ="|/posts?page=${postslist.number+1}|">newer posts &rarr;</a>
-		 			</li>
-		 		</ul>
-		 	</div>  
+		<div class="col-md-12">
+			<ul class="pager">
+				<li class="previous" th:if=${!postslist.first}><a
+					th:href="|/posts?page=${postslist.number-1}|">&larr; older
+						posts </a></li>
+				<li class="next" th:if=${!postslist.last}><a
+					th:href="|/posts?page=${postslist.number+1}|">newer posts
+						&rarr;</a></li>
+			</ul>
+		</div>
 	</section>
 	<!-- <div>
 		 		<a href="#" data-target="#modal2" data-toggle="modal">모달테스트</a>
@@ -125,8 +124,29 @@
 		<p>
 			홈으로 이동-><a href="/main">link</a>
 		</p>
+		<button type="button" class="btn btn-warning"
+			data-toggle="modal" data-target="#categoryModal">카테고리추가</button>
 	</div>
-	<!-- modal -->
+	<!-- categoryModal -->
+	<div class="modal fade" id="categoryModal" tabindex="-1"
+		role="modal" aria-labelledby="Modal-label-1">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h3>카테고리 추가</h3>
+				</div>
+				<div class="modal-body">
+					<label>추가명</label> <input class="text">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- updatemodal -->
 	<div th:each="postsmodal : ${postslist.content}">
 		<form th:action="@{/updatepost}" method="POST">
 			<div class="modal fade" th:id="|Modal-${postsmodal.id}|"
