--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -4,8 +4,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
 	layout:decorate="~{layout/base}">
 	<head>
-		<title>test 1</title>
-		<link href="css/logincss.css" rel="stylesheet">
+		<title>로그인</title>
 	</head>
 	
 	<div layout:fragment="page_content" id="page_content">
@@ -22,7 +21,7 @@
 							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 							 	<div class="form-group">
 									<label for="id" class="sr-only">ID</label>
-									<input class="form-control" id ="uid" type="text" name ="username"placeholder="Enter ID" required autofocus/>
+									<input class="form-control" id ="uid" type="text" name ="username" placeholder="Enter ID" required autofocus/>
 							 	</div>
 							 	<div class="form-group">
 								    <label for="password" class="sr-only">Password</label>	
