--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -22,9 +22,8 @@
 					<div class="card mb-3">
 						<div class="card-body">
 							<h5 class="card-title" th:text="${category.name}"></h5>
-							<h6 class="card-subtitle mb-2 text-muted" th:text="${category.version}"></h6>
-							<p class="card-text">Some quick example text to build on the
-								card title and make up the bulk of the card's content.</p>
+							<h6 class="card-subtitle mb-2 text-muted">v1.0.0</h6>
+							<p class="card-text" th:text="${category.content}"></p>
 							<a href="#" class="btn btn-primary">관리</a> 
 							<a href="#" class="btn btn-danger">삭제</a>
 						</div>
