--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -13,7 +13,7 @@
 				<h3>카테고리 리스트</h3>
 			</div>
 			<div class="col-md-2">
-				<button type="button" class="btn btn-primary">추가하기</button>
+				<a href="/category/new" class="btn btn-primary">추가하기</a>
 			</div>
 		</div>
 		<div class="row">
