--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -39,7 +39,7 @@
 			      	님 환영합니다.
 			    </span>
 			    <span class="navbar-text">
-			    	<a href="#" class="">
+			    	<a href="#" class="text-decoration-none">
 			    		<i class="fas fa-sign-out-alt"></i> 로그아웃
 			    	</a>
 			    </span>
