--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -24,7 +24,7 @@
 							<h5 class="card-title" th:text="${category.name}"></h5>
 							<h6 class="card-subtitle mb-2 text-muted">v1.0.0</h6>
 							<p class="card-text" th:text="${category.content}"></p>
-							<a th:href="|/category/edit/${category.id}" class="btn btn-primary">관리</a> 
+							<a th:href="|/category/${category.id}" class="btn btn-primary">관리</a> 
 							<a href="#" class="btn btn-danger">삭제</a>
 						</div>
 					</div>
