카테고리 Edit View 작성중 Commit

--- a/src/main/resources/templates/category/edit.html
+++ b/src/main/resources/templates/category/edit.html
@@ -15,13 +15,30 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="card">
-					<div class="cardbody">
-						<div class="col-md-2">
-							<h5>TEST</h5>
-						</div>
-						<div class="col-md-2">
-							<button type="button" class="btn btn-primary">파일등록</button>
+				<div class="col-md-12">
+					<div class="card">
+						<div class="cardbody">
+							<div class="col-md-10">
+								<h5>TEST</h5>
+							</div>
+							<div class=col-md-2>
+								<button type="button" class="btn btn-primary">파일등록</button>
+							</div>
+							<table class="table">
+								<thead class="thead-dark">
+									<tr>
+										<th scope="col">#</th>
+										<th scope="col">버전</th>
+										<th scope="col">구분</th>
+										<th scope="col">파일명</th>
+										<th scope="col">버전</th>
+										<th scope="col"></th>
+									</tr>
+								</thead>
+								<tbody>
+									<!--  -->
+								</tbody>
+							</table>
 						</div>
 					</div>
 				</div>
