--- a/src/main/resources/templates/category/edit.html
+++ b/src/main/resources/templates/category/edit.html
@@ -10,37 +10,82 @@
 	<div layout:fragment="page_content" id="page_content">
 		<div class="container">
 			<div class="row my-4">
-				<div class="col-md-12">
-					<h3>카테고리 상세보기</h3>
+				<div class="col-md-10">
+					<h3>카테고리 수정</h3>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-12">
-					<div class="card">
-						<div class="cardbody">
-							<div class="col-md-10">
-								<h5>TEST</h5>
+				<div class="col-sm-12">
+					<form action="/category" th:method="PUT">
+						<input type="hidden" th:name="${_csrf.parameterName}"
+							th:value="${_csrf.token}"/>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">카테고리</label>
+							<div class="col-sm-10">
+								<input class="form-control" type="text" name="name"
+									th:value="${category.name}" />
 							</div>
-							<div class=col-md-2>
-								<button type="button" class="btn btn-primary">파일등록</button>
-							</div>
-							<table class="table">
-								<thead class="thead-dark">
-									<tr>
-										<th scope="col">#</th>
-										<th scope="col">버전</th>
-										<th scope="col">구분</th>
-										<th scope="col">파일명</th>
-										<th scope="col">버전</th>
-										<th scope="col"></th>
-									</tr>
-								</thead>
-								<tbody>
-									<!--  -->
-								</tbody>
-							</table>
 						</div>
-					</div>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">자동업데이트</label>
+							<div class="col-sm-10">
+								<select class="form-control" name="autoupdate"
+									th:if="${category.autoupdate.equals('Y')}">
+									<option value="Y" selected="selected">허용</option>
+									<option value="N">허용안함</option>
+								</select> <select class="form-control" name="autoupdate"
+									th:unless="${category.autoupdate.equals('Y')}">
+									<option value="Y">허용</option>
+									<option value="N" selected="selected">허용안함</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">사용여부</label>
+							<div class="col-sm-10">
+								<select class="form-control" name="enable"
+									th:if="${category.enable.equals('Y')}">
+									<option value="Y" selected="selected">사용</option>
+									<option value="N">사용안함</option>
+								</select> <select class="form-control" name="enable"
+									th:unless="${category.enable.equals('Y')}">
+									<option value="Y">사용</option>
+									<option value="N" selected="selected">사용안함</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">노출여부</label>
+							<div class="col-sm-10">
+								<select class="form-control" name="visible"
+									th:if="${category.visible.equals('Y')}">
+									<option value="Y" selected="selected">노출</option>
+									<option value="N">노출안함</option>
+								</select> <select class="form-control" name="visible"
+									th:unless="${category.visible.equals('Y')}">
+									<option value="Y">노출</option>
+									<option value="N" selected="selected">노출안함</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">설명</label>
+							<div class="col-sm-10">
+								<textarea th:value="${category.content}" class="form-control" name="content" rows="4"></textarea>
+							</div> 
+						</div>
+						<div class="form-group row">
+							<label class="col-sm-2 col-form-label">버전선택</label>
+							<div class="col-sm-10">
+								<select class="form-control">
+									<option>v1.2.3</option>
+									<option>v1.2.2</option>
+								</select>
+							</div>
+						</div>
+						<button type="submit" class="btn btn-primary">수정</button>
+						<a th:href="|/category/${category.id}" class="btn btn-danger">취소</a>
+					</form>
 				</div>
 			</div>
 		</div>
