--- a/src/main/resources/templates/category/edit.html
+++ b/src/main/resources/templates/category/edit.html
@@ -19,6 +19,7 @@
 					<form action="/category" th:method="PUT">
 						<input type="hidden" th:name="${_csrf.parameterName}"
 							th:value="${_csrf.token}"/>
+						<input type="hidden" name="id" th:value="${category.id}"/>
 						<div class="form-group row">
 							<label class="col-sm-2 col-form-label">카테고리</label>
 							<div class="col-sm-10">
@@ -71,7 +72,7 @@
 						<div class="form-group row">
 							<label class="col-sm-2 col-form-label">설명</label>
 							<div class="col-sm-10">
-								<textarea th:value="${category.content}" class="form-control" name="content" rows="4"></textarea>
+								<textarea th:text="${category.content}" class="form-control" name="content" rows="4"></textarea>
 							</div> 
 						</div>
 						<div class="form-group row">
