--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -24,8 +24,14 @@
 							<h5 class="card-title" th:text="${category.name}"></h5>
 							<h6 class="card-subtitle mb-2 text-muted">v1.0.0</h6>
 							<p class="card-text" th:text="${category.content}"></p>
-							<a th:href="|/category/${category.id}" class="btn btn-primary">관리</a> 
-							<a href="#" class="btn btn-danger">삭제</a>
+							<div class="row">
+								<a th:href="|/category/${category.id}" class="btn btn-primary">관리</a>
+								<form th:method="delete" action="/category">
+									<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> 
+									<input type="hidden" name="id" th:value="${category.id}" />
+									<button type="submit" class="btn btn-danger">삭제</button>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
