--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -12,7 +12,7 @@
 			<div class="col-md-10">
 				<h3>카테고리 리스트</h3>
 			</div>
-			<div class="col-md-2">
+			<div class="col-md-2 text-right">
 				<a href="/category/new" class="btn btn-primary">추가하기</a>
 			</div>
 		</div>
