--- a/src/main/resources/templates/category/show.html
+++ b/src/main/resources/templates/category/show.html
@@ -15,14 +15,17 @@
 				</div>
 			</div>
 			<div class="row my-4">
-				<div class="col-md-10">
+				<div class="col-md-6">
 					<h5>
 						<span th:text="${category.name}">카테고리 이름</span>
 						<a href="#" class="btn btn-primary ml-5">파일 등록하기</a>
 					</h5>
 				</div>
-				<div class="col-md-2">
-					<a th:href="|/category/edit/${category.id}" class="btn btn-info">카테고리 수정</a>
+				<div class="col-md-6 text-right">
+					<div class="btn-group">
+						<a href="#" class="btn btn-outline-danger">삭제된 파일 목록</a>
+						<a th:href="|/category/edit/${category.id}" class="btn btn-outline-primary">카테고리 수정</a>
+					</div>
 				</div>
 			</div>
 			<div class="row">
