DB H2 -> MSSQL 변경 회원가입/로그인 변경완료
posts -> post  class명 변경

--- a/src/main/resources/templates/auth/sign.html
+++ b/src/main/resources/templates/auth/sign.html
@@ -22,7 +22,7 @@
 							 	
 							 	<div class="form-group">
 							 		<label for="username" class="sr-only">ID</label>
-						 			<input id="username" name="uid" type="text" class="form-control" placeholder="Enter ID" required autofocus/>
+						 			<input id="username" name="username" type="text" class="form-control" placeholder="Enter ID" required autofocus/>
 						 		</div>
 							 	<div class="form-group">
 						 			<label for="password" class="sr-only">password</label>
