--- a/src/main/resources/templates/sign.html
+++ b/src/main/resources/templates/sign.html
@@ -10,7 +10,7 @@
  	<div class="row">
  		<div class="input-field col s12">
  			<label for="username">UserId</label>
- 			<input id="username" name="uid" type="text"/>
+ 			<input id="username" name="username" type="text"/>
  		</div>
  	</div>
  	<div class="row">
