--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -26,7 +26,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">카테고리
+						<a class="nav-link" href="/category">카테고리
 							<span class="sr-only">(current)</span>
 						</a>
 					</li>
@@ -39,7 +39,7 @@
 			      	님 환영합니다.
 			    </span>
 			    <span class="navbar-text">
-			    	<a href="#" class="text-decoration-none">
+			    	<a href="/logout" class="text-decoration-none">
 			    		<i class="fas fa-sign-out-alt"></i> 로그아웃
 			    	</a>
 			    </span>
