DB 변경 후 카테고리 view, controller 수정

--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -4,13 +4,13 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/base}">
 <head>
-<title>카테고리</title>
+<title>제품</title>
 </head>
 <div layout:fragment="page_content" id="page_content">
 	<div class="container">
 		<div class="row my-4">
 			<div class="col-md-10">
-				<h3>카테고리 리스트</h3>
+				<h3>제품 리스트</h3>
 			</div>
 			<div class="col-md-2 text-right">
 				<a href="/category/new" class="btn btn-primary">추가하기</a>
