--- a/src/main/resources/templates/category/show.html
+++ b/src/main/resources/templates/category/show.html
@@ -4,20 +4,20 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/base}">
 <head>
-<title>카테고리 상세</title>
+<title>제품 상세</title>
 </head>
 <body>
 	<div layout:fragment="page_content" id="page_content">
 		<div class="container">
 			<div class="row my-4">
 				<div class="col-md-12">
-					<h3>카테고리 상세보기</h3>
+					<h3>제품 상세보기</h3>
 				</div>
 			</div>
 			<div class="row my-4">
 				<div class="col-md-6">
 					<h5>
-						<span th:text="${category.name}">카테고리 이름</span>
+						<span th:text="${category.name}">제품 이름</span>
 						<a href="#" class="btn btn-primary ml-5">파일 등록하기</a>
 					</h5>
 				</div>
