--- a/src/main/resources/templates/category/edit.html
+++ b/src/main/resources/templates/category/edit.html
@@ -4,14 +4,14 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/base}">
 <head>
-<title>카테고리 상세</title>
+<title>제품 상세</title>
 </head>
 <body>
 	<div layout:fragment="page_content" id="page_content">
 		<div class="container">
 			<div class="row my-4">
 				<div class="col-md-10">
-					<h3>카테고리 수정</h3>
+					<h3>제품 수정</h3>
 				</div>
 			</div>
 			<div class="row">
@@ -21,13 +21,13 @@
 							th:value="${_csrf.token}"/>
 						<input type="hidden" name="id" th:value="${category.id}"/>
 						<div class="form-group row">
-							<label class="col-sm-2 col-form-label">카테고리</label>
+							<label class="col-sm-2 col-form-label">제품 명</label>
 							<div class="col-sm-10">
 								<input class="form-control" type="text" name="name"
 									th:value="${category.name}" />
 							</div>
 						</div>
-						<div class="form-group row">
+						<!-- <div class="form-group row">
 							<label class="col-sm-2 col-form-label">자동업데이트</label>
 							<div class="col-sm-10">
 								<select class="form-control" name="autoupdate"
@@ -40,21 +40,21 @@
 									<option value="N" selected="selected">허용안함</option>
 								</select>
 							</div>
-						</div>
-						<div class="form-group row">
+						</div> -->
+						 <div class="form-group row">
 							<label class="col-sm-2 col-form-label">사용여부</label>
 							<div class="col-sm-10">
-								<select class="form-control" name="enable"
-									th:if="${category.enable.equals('Y')}">
+								<select class="form-control" name="used"
+									th:if="${category.used.equals('Y')}">
 									<option value="Y" selected="selected">사용</option>
 									<option value="N">사용안함</option>
-								</select> <select class="form-control" name="enable"
-									th:unless="${category.enable.equals('Y')}">
+								</select> <select class="form-control" name="used"
+									th:unless="${category.used.equals('Y')}">
 									<option value="Y">사용</option>
 									<option value="N" selected="selected">사용안함</option>
 								</select>
 							</div>
-						</div>
+						</div> 
 						<div class="form-group row">
 							<label class="col-sm-2 col-form-label">노출여부</label>
 							<div class="col-sm-10">
@@ -75,7 +75,7 @@
 								<textarea th:text="${category.content}" class="form-control" name="content" rows="4"></textarea>
 							</div> 
 						</div>
-						<div class="form-group row">
+					<!-- 	<div class="form-group row">
 							<label class="col-sm-2 col-form-label">버전선택</label>
 							<div class="col-sm-10">
 								<select class="form-control">
@@ -83,7 +83,7 @@
 									<option>v1.2.2</option>
 								</select>
 							</div>
-						</div>
+						</div> -->
 						<button type="submit" class="btn btn-primary">수정</button>
 						<a th:href="|/category/${category.id}" class="btn btn-danger">취소</a>
 					</form>
