--- a/src/main/resources/templates/category/new.html
+++ b/src/main/resources/templates/category/new.html
@@ -4,13 +4,13 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/base}">
 <head>
-<title>카테고리</title>
+<title>제품신규등록</title>
 </head>
 <div layout:fragment="page_content" id="page_content">
 	<div class="container">
 		<div class="row my-4">
 			<div class="col-md-10">
-				<h3>카테고리 등록</h3>
+				<h3>제품 등록</h3>
 			</div>
 			<div class="col-md-2 text-right">
 				<a href="/category" class="btn btn-primary">목록으로</a>
@@ -21,12 +21,12 @@
 				<form role="form" method="POST" action="/category"  th:object="${category}">
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 					<div class="form-group row">
-						<label for="name" class="col-sm-2 col-form-label">카테고리 명</label>
+						<label for="name" class="col-sm-2 col-form-label">제품 명</label>
 						<div class="col-sm-10">
 							<input type="text" th:field="*{name}" name="name" class="form-control" id="name" placeholder="카테고리 명">
 						</div>
 					</div>
-					<div class="form-group row">
+				<!-- 	<div class="form-group row">
 						<label for="autoupdate" class="col-sm-2 col-form-label">자동 업데이트</label>
 						<div class="col-sm-10">
 							<select class="form-control" th:field="*{autoupdate}" name="autoupdate" id="autoupdate">
@@ -34,11 +34,11 @@
 								<option value="N">미허용</option>
 							</select>
 						</div>
-					</div>
+					</div> -->
 					<div class="form-group row">
 						<label for="enable" class="col-sm-2 col-form-label">사용 여부</label>
 						<div class="col-sm-10">
-							<select class="form-control" th:field="*{enable}" name="enable" id="enable">
+							<select class="form-control" th:field="*{used}" name="used" id="used">
 								<option value="Y">사용</option>
 								<option value="N">미사용</option>
 							</select>
