--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -16,7 +16,7 @@
 
 			</div>
 			<div class="col-md-2 text-right">
-				<a th:href="|/category/${post.id}" class="btn btn-primary">목록으로</a>
+				<a th:href="|/category/${post.categoryId}" class="btn btn-primary">목록으로</a>
 			</div>
 		</div>
 		<div class="row mt-4">
