--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -20,65 +20,63 @@
 			</div>
 		</div>
 		<div class="row mt-4">
-			<div class="col ">
+			<div class="col-md-12">
 				<div class="input-group mb-3">
 					<div class="input-group-prepend">
 						<span class="input-group-text" id="inputGroupFileAddon01">파일업로드</span>
 					</div>
 					<div class="custom-file">
-						<input type="file" class="custom-file-input" id="file"> 
-						<label class="custom-file-label">파일선택</label>
-					</div>
+				    	<input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+				    	<label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+				  	</div>
 				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<form>
+				<form role="form" method="POST" action="/post"  th:object="${post}">
+					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+					<input type="hidden" th:name="categoryId" th:value="${post.categoryId}"/>
 					<div class="form-group row">
 						<label for="ver" class="col-sm-2 col-form-label">버전</label>
 						<div class="col-sm-10">
-							<input type="text" class="form-control" id="ver" readonly>
+							<input id="ver" type="text" th:field="*{ver}" class="form-control" readonly>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label for="fileSize" class="col-sm-2 col-form-label">파일
-							사이즈</label>
+							사이즈(MB)</label>
 						<div class="col-sm-10">
-							<input type="text" class="form-control" id="fileSize" value="MB"
-								readonly>
+							<input type="text" id="fileSize" th:field="*{fileSize}" class="form-control" readonly>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label for="description" class="col-sm-2 col-form-label">설명</label>
 						<div class="col-sm-10">
-							<textarea class="form-control" id="description" rows="3">
+							<textarea id="content" class="form-control" th:field="*{content}" rows="3">
 							</textarea>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label for="used" class="col-sm-2 col-form-label">사용 여부</label>
 						<div class="col-sm-10">
-							<input type="text" class="form-control" id="used" readonly>
+							<input  id="used" type="text" class="form-control" th:field="*{activated}" value="Y"  readonly>
 						</div>
 					</div>
+					<!-- model 추가 요망 -->
 					<div class="form-group row">
 						<label for="beta" class="col-sm-2 col-form-label">베타 여부</label>
 						<div class="col-sm-10">
-							<input type="text" class="form-control" id="beta" value="Y" readonly>
+							<input id="beta" type="text" class="form-control" value="Y" readonly>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label for="name" class="col-sm-2 col-form-label">파일 명</label>
 						<div class="col-sm-10">
-							<input type="text" class="form-control" id="name" value="Y" readonly>
+							<input id="activated" type="text" class="form-control" th:field="*{activated}" value="Y" readonly>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label for="filePath" class="col-sm-2 col-form-label">파일
 							경로</label>
 						<div class="col-sm-10">
-							<input type="text" class="form-control" id="filePath" readonly>
+							<input id="filePath" type="text" class="form-control" th:field="*{filePath}"readonly>
 						</div>
 					</div>
 				</form>
@@ -91,4 +89,19 @@
 		</div>
 	</div>
 </div>
+<script th:inline="javascript" layout:fragment="script_area">
+$(document).ready(function(e) {
+	$('input[type="file"]').change(function(e){
+        var fileSize = e.target.files[0].size;
+        var fileName = e.target.files[0].name;
+        // 파일명 규칙 필요
+        var ver = 'v1.1.1';
+        
+        
+       	$('#ver').val(ver);
+        $('#fileSize').val(fileSize);
+        $('.custom-file-label').html(fileName);
+    });
+});
+</script>
 </html>
