--- a/src/main/resources/templates/category/detail.html
+++ b/src/main/resources/templates/category/detail.html
@@ -51,12 +51,34 @@
 								<th scope="col">
 									
 								</th>
-								<th scope="col">
-									
-								</th>
 							</tr>
 						</thead>
 						<tbody>
+							<th:block th:each="post : ${category.posts}">
+								<tr>
+									<td>
+										<span th:text="${post.ver}">*.*.*</span>
+									</td>
+									<td>
+										<span th:text="${post.name}">이름</span>
+									</td>
+									<td>
+										<span th:text="${post.content}">상세설명</span>
+									</td>
+									<td>
+										<span th:text="${post.distinction}">베타여부</span>
+									</td>
+									<td>
+										<span th:text="${post.activated}">사용여부</span>
+									</td>
+									<td>
+										<div class="btn-group">
+											<a th:href="|/post/edit/${post.id}"  class="btn btn-warning">수정</a>
+											<a href="#" class="btn btn-danger">삭제</a>
+										</div>
+									</td>
+								</tr>
+							</th:block>
 						</tbody>
 					</table>
 				</div>
