--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -16,14 +16,14 @@
 
 			</div>
 			<div class="col-md-2 text-right">
-				<a th:href="|/category/${post.categoryId}" class="btn btn-primary">목록으로</a>
+				<a th:href="|/category/${category_id}" class="btn btn-primary">목록으로</a>
 			</div>
 		</div>
 		<div class="row mt-4">
 			<div class="col-md-12">
 				<form role="form" method="POST" th:action="@{/post}"  th:object="${post}" enctype="multipart/form-data">
 					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-					<input type="hidden" th:name="categoryId" th:value="${post.categoryId}"/>
+					<input type="hidden" th:field="*{category}"/>
 					
 					<div class="form-group row">
 						<div class="input-group mb-3">
