add post update

--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -17,7 +17,7 @@
 				
 			</div>
 			<div class="col-md-2 text-right">
-				<a th:href="|/category/${post.id}" class="btn btn-primary">목록으로</a>
+				<a th:href="|/category/${post.category.id}" class="btn btn-primary">목록으로</a>
 			</div>
 		</div>
 		<div class="row mb-4">
@@ -29,8 +29,8 @@
 			<div class="col">
 				<form role="form"  th:method="PUT" th:action="@{/post}"  th:object="${post}">
 					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-					<input type="hidden" th:name="productId" th:value="${post.category.id}"/>
-					<input type="hidden" th:name="id" th:value="${post.id}"/>
+					<input type="hidden" th:field="*{category}"/>
+					<input type="hidden" th:field="*{id}"/>
 					<div class="form-group row">
 						<label for="ver" class="col-sm-2 col-form-label">버전</label>
 						<div class="col-sm-10">
