--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -54,14 +54,20 @@
 					<div class="form-group row">
 						<label for="activated" class="col-sm-2 col-form-label">사용 여부</label>
 						<div class="col-sm-10">
-							<input  id="activated" type="text" class="form-control" th:field="*{activated}" value="Y"  readonly>
+							<select class="form-control" name="activated" th:field="*{activated}" >
+								<option value="Y">사용</option>
+								<option value="N">사용안함</option>
+							</select>
 						</div>
 					</div>
 					<!-- model 추가 요망 -->
 					<div class="form-group row">
 						<label for="distinction" class="col-sm-2 col-form-label">베타 여부</label>
 						<div class="col-sm-10">
-							<input id="distinction" type="text" class="form-control" th:field="*{distinction}" value="Y" readonly>
+							<select class="form-control" name="distinction" th:field="*{distinction}" >
+								<option value="B">베타</option>
+								<option value="M">정식</option>
+							</select>
 						</div>
 					</div>
 					<div class="form-group row">
