file download 개선

--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -44,18 +44,21 @@
 										aria-expanded="false" th:aria-controls="@{'collapse-'+${category.id}}">
 										이력보기 </a>
 								</div>
-								<div class="col-md-12">
+								<div class="col-md-12" >
 									<div class="collapse multi-collapse" th:id="@{'collapse-'+${category.id}}">
-										<div class="card card-body">
-											<ul class="list-group">
+										<div class="card card-body" >
+											<div class="list-group" th:if="${#lists.size(category.posts) != 0 }">
 												<th:block th:each="post : ${category.posts}">
 													<!-- download link 추가 및  사용여부 filter 추가 필요-->
-													<li class="list-group-item" th:text="${post.name}">
+													<a th:href="@{'/post/'+${post.id}+'/download' }" target="_blank" 
+													class="list-group-item post-download"  th:text="${post.name}">
 														파일 이름
-													</li>
-													
+													</a>
 												</th:block>
-											</ul>
+											</div>
+											<div th:if="${#lists.size(category.posts) == 0 }">
+												사용할 수 있는 파일이 없습니다.
+											</div>
 										</div>
 									</div>
 								</div>
@@ -66,41 +69,41 @@
 			</th:block>
 		</div>
 	</div>
-</div>
-<div sec:authorize="hasRole('ADMIN')">
-	<!-- Delete modal -->
-	<div class="modal fade" id="modal1" tabindex="-1" role="dialog"
-		aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-		<form action="/category" th:method="delete">
-			<input type="hidden" th:name="${_csrf.parameterName}"
-				th:value="${_csrf.token}" />
-			<div class="modal-dialog modal-dialog-centered" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title"></h5>
-						<button type="button" class="close" data-dismiss="modal"
-							aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-						<h2>삭제하시겠습니까?</h2>
-						<input type="hidden" name="id" id="categoryid" value="" /> <input
-							type="hidden" name="name" id="categoryName" value="" />
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-danger" data-dismiss="modal">취소</button>
-						<button id="delete-modal-btn" type="button"
-							class="btn btn-primary">삭제</button>
+
+	<div sec:authorize="hasRole('ADMIN')">
+		<!-- Delete modal -->
+		<div class="modal fade" id="modal1" tabindex="-1" role="dialog"
+			aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+			<form action="/category" th:method="delete">
+				<input type="hidden" th:name="${_csrf.parameterName}"
+					th:value="${_csrf.token}" />
+				<div class="modal-dialog modal-dialog-centered" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title"></h5>
+							<button type="button" class="close" data-dismiss="modal"
+								aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<h2>삭제하시겠습니까?</h2>
+							<input type="hidden" name="id" id="categoryid" value="" /> <input
+								type="hidden" name="name" id="categoryName" value="" />
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-danger" data-dismiss="modal">취소</button>
+							<button id="delete-modal-btn" type="button"
+								class="btn btn-primary">삭제</button>
+						</div>
 					</div>
 				</div>
-			</div>
-		</form>
+			</form>
+		</div>
 	</div>
+	
 </div>
-</div>
-<div sec:authorize="hasRole('ADMIN')">
-	<script th:inline="javascript" layout:fragment="script_area">
+	<script  th:inline="javascript" layout:fragment="script_area" >
 		$(document).ready(function(e) {
 			$('.deleteModal').on('click', function() {
 				var id = $(this).data('id');
@@ -130,5 +133,5 @@
 			});
 		});
 	</script>
-</div>
+	
 </html>
