--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -73,7 +73,7 @@
 					<div class="form-group row">
 						<label for="name" class="col-sm-2 col-form-label">파일 명</label>
 						<div class="col-sm-10">
-							<input id="name" type="text" class="form-control" th:field="*{name}" value="Y" readonly>
+							<input id="name" type="text" class="form-control" th:field="*{name}" readonly>
 						</div>
 					</div>
 					<div class="form-group row">
