--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -29,6 +29,7 @@
 				<form role="form" method="POST" th:action="@{/post}"  th:object="${post}" enctype="multipart/form-data">
 					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 					<input type="hidden" th:field="*{category}"/>
+					<input type="hidden" th:field="*{id}"/>
 					
 					<div class="form-group row">
 						<div class="input-group mb-3">
@@ -64,14 +65,18 @@
 					<div class="form-group row">
 						<label for="activated" class="col-sm-2 col-form-label">사용 여부</label>
 						<div class="col-sm-10">
-							<input  id="activated" type="text" class="form-control" th:field="*{activated}" value="Y"  readonly>
+							<select class="form-control" name="activated" >
+									<option value="N"  selected="selected">사용안함</option>
+							</select> 
 						</div>
 					</div>
 					<!-- model 추가 요망 -->
 					<div class="form-group row">
 						<label for="distinction" class="col-sm-2 col-form-label">베타 여부</label>
 						<div class="col-sm-10">
-							<input id="distinction" type="text" class="form-control" th:field="*{distinction}" value="Y" readonly>
+							<select class="form-control" name="distinction" >
+									<option value="B"  selected="selected">베타</option>
+							</select> 
 						</div>
 					</div>
 					<div class="form-group row">
@@ -105,7 +110,7 @@ $(document).ready(function(e) {
         // 파일명 규칙 필요
         var ver = 'v1.1.1';
         
-        
+        $('#name').val(fileName)
        	$('#ver').val(ver);
         $('#fileSize').val(fileSize);
         $('.custom-file-label').html(fileName);
