--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -89,7 +89,7 @@
 						<label for="filePath" class="col-sm-2 col-form-label">파일
 							경로</label>
 						<div class="col-sm-10">
-							<input id="filePath" type="text" class="form-control" th:field="*{filePath}"readonly>
+							<input id="filePath" type="text" class="form-control" th:field="*{filePath}"/>
 						</div>
 					</div>
 					<div class="row">
