--- a/src/main/resources/templates/category/detail.html
+++ b/src/main/resources/templates/category/detail.html
@@ -18,13 +18,13 @@
 				<div class="col-md-6">
 					<h5>
 						<span th:text="${category.name}">제품 이름</span>
-						<a th:href="|/post/new?categoryId=${category.id}" class="btn btn-primary ml-5">파일 등록하기</a>
+						<a th:href="@{'/post/new?categoryId='+${category.id}}" class="btn btn-primary ml-5">파일 등록하기</a>
 					</h5>
 				</div>
 				<div class="col-md-6 text-right">
 					<div class="btn-group">
 						<a href="#" class="btn btn-outline-danger">삭제된 파일 목록</a>
-						<a th:href="|/category/edit/${category.id}" class="btn btn-outline-primary">카테고리 수정</a>
+						<a th:href="@{'/category/edit/'+${category.id}}" class="btn btn-outline-primary">카테고리 수정</a>
 					</div>
 				</div>
 			</div>
@@ -75,7 +75,7 @@
 									</td>
 									<td>
 										<div class="btn-group">
-											<a th:href="|/post/edit/${post.id}"  class="btn btn-warning">수정</a>
+											<a th:href="@{'/post/edit/'+${post.id}}" class="btn btn-warning">수정</a>
 											<a href="#" class="btn btn-danger">삭제</a>
 										</div>
 									</td>
