--- a/src/main/resources/templates/category/edit.html
+++ b/src/main/resources/templates/category/edit.html
@@ -16,7 +16,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
-					<form action="/category" th:method="PUT">
+					<form th:action="@{'/category'}" th:method="PUT">
 						<input type="hidden" th:name="${_csrf.parameterName}"
 							th:value="${_csrf.token}"/>
 						<input type="hidden" name="id" th:value="${category.id}"/>
@@ -85,7 +85,7 @@
 							</div>
 						</div> -->
 						<button type="submit" class="btn btn-primary">수정</button>
-						<a th:href="|/category/${category.id}" class="btn btn-danger">취소</a>
+						<a th:href="@{'/category/'+${category.id}}" class="btn btn-danger">취소</a>
 					</form>
 				</div>
 			</div>
