--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="col-md-2 text-right">
 				<div sec:authorize="hasRole('ADMIN')">
-					<a href="/category/new" class="btn btn-primary">추가하기</a>
+					<a th:href="@{'/category/new'}" class="btn btn-primary">추가하기</a>
 				</div>
 			</div>
 		</div>
@@ -30,7 +30,7 @@
 
 							<div sec:authorize="hasRole('ADMIN')" class="row">
 								<div class="btn-group col-md-12">
-									<a th:href="|/category/${category.id}" class="btn btn-primary">관리</a>
+									<a th:href="@{'/category/'+${category.id}}" class="btn btn-primary">관리</a>
 									<a href="#" class="btn btn-danger deleteModal"
 										th:data-id="${category.id}" th:data-name="${category.name}">삭제</a>
 								</div>
