--- a/src/main/resources/templates/category/new.html
+++ b/src/main/resources/templates/category/new.html
@@ -13,12 +13,12 @@
 				<h3>제품 등록</h3>
 			</div>
 			<div class="col-md-2 text-right">
-				<a href="/category" class="btn btn-primary">목록으로</a>
+				<a th:href="@{'/category'}" class="btn btn-primary">목록으로</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<form role="form" method="POST" action="/category"  th:object="${category}">
+				<form role="form" method="POST" th:action="@{'/category'}"  th:object="${category}">
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 					<div class="form-group row">
 						<label for="name" class="col-sm-2 col-form-label">제품 명</label>
