--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -17,7 +17,7 @@
 				
 			</div>
 			<div class="col-md-2 text-right">
-				<a th:href="|/category/${post.category.id}" class="btn btn-primary">목록으로</a>
+				<a th:href="@{'/category/'+${post.category.id}}" class="btn btn-primary">목록으로</a>
 			</div>
 		</div>
 		<div class="row mb-4">
