--- a/src/main/resources/templates/category/detail.html
+++ b/src/main/resources/templates/category/detail.html
@@ -60,8 +60,7 @@
 										<span th:text="${post.ver}">*.*.*</span>
 									</td>
 									<td>
-									    <input type="hidden"  name="Name" th:value="${#strings.indexOf(post.Name,'he')}"/>   
-										<span th:text="${#strings.substring(post.Name,0,3)}  ">이름</span>
+										<span th:text="${#strings.substringAfter(post.Name,'_')}">이름</span>
 									</td>
 									<td>
 										<span th:text="${post.content}">상세설명</span>
