--- a/src/main/resources/templates/post/new.html
+++ b/src/main/resources/templates/post/new.html
@@ -16,7 +16,7 @@
 
 			</div>
 			<div class="col-md-2 text-right">
-				<a th:href="|/category/${post.category.id}" class="btn btn-primary">목록으로</a>
+				<a th:href="|/category/${categoryid}" class="btn btn-primary">목록으로</a>
 			</div>
 			<div class="col-md-12">
 				<div th:if="${error != null} " class="alert alert-danger" role="alert">
@@ -26,10 +26,10 @@
 		</div>
 		<div class="row mt-4">
 			<div class="col-md-12">
-				<form role="form" method="POST" th:action="@{/post}"  th:object="${post}" enctype="multipart/form-data">
+				<form role="form" method="POST" th:action="@{/post}" enctype="multipart/form-data">
 					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-					<input type="hidden" th:field="*{category}"/>
-					<input type="hidden" th:field="*{id}"/>
+					<input type="hidden" th:name="category" th:value="${categoryid}"/>
+					<!-- <input type="hidden" th:field="*{id}"/> -->
 					
 					<div class="form-group row">
 						<div class="input-group mb-3">
@@ -45,20 +45,20 @@
 					<div class="form-group row">
 						<label for="ver" class="col-sm-2 col-form-label">버전</label>
 						<div class="col-sm-10">
-							<input id="ver" type="text" th:field="*{ver}" class="form-control" readonly>
+							<input id="ver" type="text" th:name="ver" class="form-control" readonly>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label for="fileSize" class="col-sm-2 col-form-label">파일
 							사이즈(MB)</label>
 						<div class="col-sm-10">
-							<input type="text" id="fileSize" th:field="*{fileSize}" class="form-control" readonly>
+							<input type="text" id="fileSize" th:name="fileSize" class="form-control" readonly>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label for="content" class="col-sm-2 col-form-label">설명</label>
 						<div class="col-sm-10">
-							<textarea id="content" class="form-control" th:field="*{content}" rows="3">
+							<textarea id="content" class="form-control" th:name="content" rows="3">
 							</textarea>
 						</div>
 					</div>
@@ -82,14 +82,14 @@
 					<div class="form-group row">
 						<label for="name" class="col-sm-2 col-form-label">파일 명</label>
 						<div class="col-sm-10">
-							<input id="name" type="text" class="form-control" th:field="*{name}" value="Y" readonly>
+							<input id="name" type="text" class="form-control" th:name="name" value="Y" readonly>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label for="filePath" class="col-sm-2 col-form-label">파일
 							경로</label>
 						<div class="col-sm-10">
-							<input id="filePath" type="text" class="form-control" th:field="*{filePath}"/>
+							<input id="filePath" type="text" class="form-control" th:name="filePath"/>
 						</div>
 					</div>
 					<div class="row">
