--- a/src/main/resources/templates/category/detail.html
+++ b/src/main/resources/templates/category/detail.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	layout:decorate="~{layout/base}">
 <head>
 <title>제품 상세</title>
@@ -17,14 +18,16 @@
 			<div class="row my-4">
 				<div class="col-md-6">
 					<h5>
-						<span th:text="${category.name}">제품 이름</span>
-						<a th:href="@{'/post/new?categoryId='+${category.id}}" class="btn btn-primary ml-5">파일 등록하기</a>
+						<span th:text="${category.name}">제품 이름</span> <a
+							th:href="@{'/post/new?categoryId='+${category.id}}"
+							class="btn btn-primary ml-5">파일 등록하기</a>
 					</h5>
 				</div>
 				<div class="col-md-6 text-right">
 					<div class="btn-group">
-						<a href="#" class="btn btn-outline-danger">삭제된 파일 목록</a>
-						<a th:href="@{'/category/edit/'+${category.id}}" class="btn btn-outline-primary">카테고리 수정</a>
+						<a href="#" class="btn btn-outline-danger">삭제된 파일 목록</a> <a
+							th:href="@{'/category/edit/'+${category.id}}"
+							class="btn btn-outline-primary">카테고리 수정</a>
 					</div>
 				</div>
 			</div>
@@ -32,51 +35,37 @@
 				<div class="col">
 					<table class="table table-bordered">
 						<thead class="thead-dark">
-							<tr>	
-								<th scope="col">
-									버전
-								</th>
-								<th scope="col">
-									파일명
-								</th>
-								<th scope="col">
-									상세설명
-								</th>
-								<th scope="col">
-									베타여부
-								</th>
-								<th scope="col">
-									사용여부
-								</th>
-								<th scope="col">
-									
-								</th>
+							<tr>
+								<th scope="col">버전</th>
+								<th scope="col">파일명</th>
+								<th scope="col">상세설명</th>
+								<th scope="col">베타여부</th>
+								<th scope="col">사용여부</th>
+								<th scope="col"></th>
 							</tr>
 						</thead>
 						<tbody>
-							<th:block th:each="post : ${category.posts}" >
+							<th:block th:each="post : ${category.posts}">
 								<tr>
-									<td>
-										<span th:text="${post.ver}">*.*.*</span>
+									<td><span th:text="${post.ver}">*.*.*</span></td>
+									<td><span
+										th:text="${#strings.substringAfter(post.Name,'_')}">이름</span>
 									</td>
-									<td>
-										<span th:text="${#strings.substringAfter(post.Name,'_')}">이름</span>
+									<td><span th:text="${post.content}">상세설명</span></td>
+									<td><span th:text="베타"
+										th:if="${post.distinction.equals('B')}">베타</span> <span
+										th:text="정식" th:if="${post.distinction.equals('M')}">정식</span>
 									</td>
-									<td>
-										<span th:text="${post.content}">상세설명</span>
-									</td>
-									<td>
-										<span th:text="베타" th:if="${post.distinction.equals('B')}">베타</span>
-										<span th:text="정식" th:if="${post.distinction.equals('M')}">정식</span>
-									</td>
-									<td>
-										<span th:text="사용" th:if="${post.activated.equals('Y')}"></span>
-										<span th:text="사용안함" th:if="${post.activated.equals('N')}">사용안함</span>
+									<td><span th:text="사용"
+										th:if="${post.activated.equals('Y')}"></span> <span
+										th:text="사용안함" th:if="${post.activated.equals('N')}">사용안함</span>
 									</td>
 									<td>
 										<div class="btn-group">
-											<a th:href="@{'/post/edit/'+${post.id}}" class="btn btn-warning">수정</a>
-											<a href="#" class="btn btn-danger">삭제</a>
+											<a th:href="@{'/post/edit/'+${post.id}}"
+												class="btn btn-warning">수정</a> <a href="#"
+												class="btn btn-danger postdeletemodal"
+												th:data-id="${post.id}" th:data-name="${post.name}">삭제</a>
 										</div>
 									</td>
 								</tr>
@@ -84,8 +73,71 @@
 						</tbody>
 					</table>
 				</div>
-			</div>			
+			</div>
+		</div>
+		<div sec:authorize="hasRole('ADMIN')">
+			<!-- Delete modal -->
+			<div class="modal fade" id="postdeletemodal" tabindex="-1"
+				role="dialog" aria-labelledby="exampleModalCenterTitle"
+				aria-hidden="true">
+				<form action="/post" th:method="delete">
+					<input type="hidden" th:name="${_csrf.parameterName}"
+						th:value="${_csrf.token}" />
+					<div class="modal-dialog modal-dialog-centered" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title"></h5>
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								<h2>삭제하시겠습니까?</h2>
+								<input type="hidden" name="id" id="postid" value="" /> 
+								<input type="hidden" name="name" id="postName" value="" />
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-danger"
+									data-dismiss="modal">취소</button>
+								<button id="delete-modal-btn" type="button"
+									class="btn btn-primary">삭제</button>
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
 		</div>
 	</div>
+	<script th:inline="javascript" layout:fragment="script_area">
+		$(document).ready(function(e) {
+			$('.postdeletemodal').on('click', function() {
+				var id = $(this).data('id');
+				var name = $(this).data('name');
+				$(".modal-title").text(name);
+				$(".modal-body #postName").val(name);
+				$(".modal-body #postid").val(id);
+				$("#postdeletemodal").modal('show');
+			});
+
+			$("#delete-modal-btn").on('click', function() {
+				var data = {
+					id : $("#postid").val()
+				};
+				$.ajax({
+					url : '/post',
+					type : 'DELETE',
+					datatype : 'json',
+					contentType : 'application/json; charset=utf-8',
+					data : JSON.stringify(data)
+				}).done(function() {
+					alert('삭제되었습니다!');
+					location.reload(true);
+				}).fail(function(textStatus) {
+					alert(textStatus);
+				});
+			});
+		});
+	</script>
 </body>
 </html>
