--- a/src/main/resources/templates/category/edit.html
+++ b/src/main/resources/templates/category/edit.html
@@ -16,15 +16,15 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
-					<form th:action="@{'/category'}" th:method="PUT">
+					<form th:action="@{'/category'}" th:method="PUT"
+						th:object="${category}">
 						<input type="hidden" th:name="${_csrf.parameterName}"
-							th:value="${_csrf.token}"/>
-						<input type="hidden" name="id" th:value="${category.id}"/>
+							th:value="${_csrf.token}" /> <input type="hidden" 
+							th:field="*{id}" />
 						<div class="form-group row">
 							<label class="col-sm-2 col-form-label">제품 명</label>
 							<div class="col-sm-10">
-								<input class="form-control" type="text" name="name"
-									th:value="${category.name}" />
+								<input class="form-control" type="text" th:field="*{name}" />
 							</div>
 						</div>
 						<!-- <div class="form-group row">
@@ -41,41 +41,32 @@
 								</select>
 							</div>
 						</div> -->
-						 <div class="form-group row">
+						<div class="form-group row">
 							<label class="col-sm-2 col-form-label">사용여부</label>
 							<div class="col-sm-10">
-								<select class="form-control" name="used"
-									th:if="${category.used.equals('Y')}">
-									<option value="Y" selected="selected">사용</option>
-									<option value="N">사용안함</option>
-								</select> <select class="form-control" name="used"
-									th:unless="${category.used.equals('Y')}">
+								<select class="form-control" th:field="*{used}">
 									<option value="Y">사용</option>
-									<option value="N" selected="selected">사용안함</option>
+									<option value="N">사용안함</option>
 								</select>
 							</div>
-						</div> 
+						</div>
 						<div class="form-group row">
 							<label class="col-sm-2 col-form-label">노출여부</label>
 							<div class="col-sm-10">
-								<select class="form-control" name="visible"
-									th:if="${category.visible.equals('Y')}">
-									<option value="Y" selected="selected">노출</option>
-									<option value="N">노출안함</option>
-								</select> <select class="form-control" name="visible"
-									th:unless="${category.visible.equals('Y')}">
+								<select class="form-control" th:field="*{visible}">
 									<option value="Y">노출</option>
-									<option value="N" selected="selected">노출안함</option>
+									<option value="N">노출안함</option>
 								</select>
 							</div>
 						</div>
 						<div class="form-group row">
 							<label class="col-sm-2 col-form-label">설명</label>
 							<div class="col-sm-10">
-								<textarea th:text="${category.content}" class="form-control" name="content" rows="4"></textarea>
-							</div> 
+								<textarea th:field="*{content}" class="form-control" rows="4">
+								</textarea>
+							</div>
 						</div>
-					<!-- 	<div class="form-group row">
+						<!-- 	<div class="form-group row">
 							<label class="col-sm-2 col-form-label">버전선택</label>
 							<div class="col-sm-10">
 								<select class="form-control">
